fix(#3): try fix shift

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,6 @@ html,
 body {
   overflow-x: hidden;
   /* min-width: 360px; */
-  
 }
 
 body {
@@ -20,7 +19,7 @@ body {
 
 html:has(.modal[open]),
 body:has(.modal[open]) {
-  /* overflow: hidden; */
+  overflow: hidden;
   /* overscroll-behavior: contain; */
   /* touch-action: none; */
   /* position: fixed; */
